# gmm

./: .gitignore  README.md  gmm_jax_em_demo.ipynb  plotting_utils.py  pyproject.toml  requirements.txt  scribble.py
gmm/: __init__.py  core.py  gmm.py  utils.py
tests/: test_gmm.py
