[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gmm"
version = "0.1.0"
description = "Gaussian Mixture Model implementation"
authors = [
    {name = "Miloš Tomić"}
]
readme = ""
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
